# pixel_planets_rs

./: AI-DECLARATION.md  Cargo.toml  LICENSE  README.md
assets/shaders/: planet_common.wgsl
assets/shaders/asteroid/: asteroid.wgsl
assets/shaders/blackhole/: accretiondisk.wgsl  shadow.wgsl
assets/shaders/dryterran/: dryterran.wgsl
assets/shaders/galaxy/: galaxy.wgsl
assets/shaders/gasplanet/: base.wgsl  gaslayer.wgsl  ring.wgsl
assets/shaders/iceworld/: lakes.wgsl
assets/shaders/landmasses/: clouds.wgsl  landmass.wgsl  planetunder.wgsl
assets/shaders/lavaworld/: rivers.wgsl
assets/shaders/noatmosphere/: craters.wgsl  surface.wgsl
assets/shaders/rivers/: rivers.wgsl
assets/shaders/star/: blobs.wgsl  body.wgsl  flares.wgsl
examples/: demo.rs
src/: lib.rs
src/bodies/: asteroid.rs  bandedgasgiant.rs  blackhole.rs  galaxy.rs  iceworld.rs  islands.rs  lavaworld.rs  martian.rs  mod.rs  noatmosphere.rs  star.rs  stormygasgiant.rs  terran.rs
src/bodies/building_blocks/: clouds.rs  craters.rs  mod.rs  planetunder.rs  surface.rs
